--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
+local_backend: true
+
 backend:
   name: git-gateway
-  branch: master
+  branch: main
 media_folder: public/images
 public_folder: /images
 publish_mode: editorial_workflow
